--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="d8clientApp">
+  <body ng-app="listandviewApp">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -33,7 +33,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">d8client</a>
+            <a class="navbar-brand" href="#/">listandview</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
