<video><source> tag wont load added src to video tag

--- a/app/index.html
+++ b/app/index.html
@@ -33,15 +33,15 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">listandview</a>
+            <a class="navbar-brand" href="#!/">listandview</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul id="menu" class="nav navbar-nav">
-              <li class="leaf"><a href="#/">Home</a></li>
-              <li class="leaf"><a ng-href="#/list">list</a></li>
-              <li class="leaf"><a ng-href="#/">Contact</a></li>
+              <li class="leaf"><a href="#!/">Home</a></li>
+              <li class="leaf"><a ng-href="#!/list">list</a></li>
+              <li class="leaf"><a ng-href="#!/">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -54,7 +54,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-copyright-mark"></span> Leo Theobald</p>
       </div>
     </div>
 
